test_regress/t/t_timing_unset3.out
%Error-NEEDTIMINGOPT: t/t_clocking_notiming.v:11:8: Use --timing or --no-timing to specify how clocking output skew greater than #0 should be handled
                                                  : ... note: In instance 't'
   11 |        output #1 out;
      |        ^~~~~~
                      ... For error description see https://verilator.org/warn/NEEDTIMINGOPT?v=latest
%Error: Exiting due to
